# dbml

./: Cargo.toml  example_project.yaml
src/: cli.rs  config.rs  dbml.rs  main.rs
src/commander/: clean.rs  generate.rs  mod.rs  scan.rs  search.rs  validate.rs
src/db/: mod.rs  mysql.rs
