[package]
name = "dbml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive"] }
home = "0.5.9"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql" ] }
tokio = { version = "1.35.1", features = ["full"] }
rustls = "0.22.2"
regex = "1.10.4"
